<?xml version="1.0"?>
<package format="2">
  <name>perception_fake</name>
  <version>0.0.0</version>
  <description>The perception_fake package</description>

  <maintainer  email="fmrico@gmail.com">Francisco Martín</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
